Create login page
Added controler to create and delete session.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,3 +6,12 @@
   color: rgba(0,0,0,.9);
   font-size: 1.3em;
 }
+
+.nav-items {
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+.nav-items a {
+  padding-right: 8px;
+}
