--- a/lib/bank_web/templates/layout/app.html.eex
+++ b/lib/bank_web/templates/layout/app.html.eex
@@ -11,9 +11,10 @@
     <header>
       <section class="container">
         <nav role="navigation">
-          <ul>
-            <li><%= link "Register", to: Routes.user_path(@conn, :new) %></li>
-          </ul>
+          <span class="nav-items">
+            <%= link "Register", to: Routes.user_path(@conn, :new) %>
+            <%= link "Login", to: Routes.session_path(@conn, :new) %>
+          </span>
         </nav>
         <%= link "PRS Bank", to: Routes.page_path(@conn, :index), class: "bank-logo" %>
       </section>
