--- a/lib/bank_web/templates/layout/app.html.eex
+++ b/lib/bank_web/templates/layout/app.html.eex
@@ -12,8 +12,17 @@
       <section class="container">
         <nav role="navigation">
           <span class="nav-items">
-            <%= link "Register", to: Routes.user_path(@conn, :new) %>
-            <%= link "Login", to: Routes.session_path(@conn, :new) %>
+            <%= if @current_user do %>
+              <%= link "Log out",
+                  to: Routes.session_path(@conn, :delete, @current_user),
+                  method: "delete" %>
+            <% else %>
+              <%= link "Register", to: Routes.user_path(@conn, :new) %>
+              <%= link "Login", to: Routes.session_path(@conn, :new) %>
+            <% end %>
+
+
+
           </span>
         </nav>
         <%= link "PRS Bank", to: Routes.page_path(@conn, :index), class: "bank-logo" %>
