--- a/lib/bank_web/templates/session/new.html.eex
+++ b/lib/bank_web/templates/session/new.html.eex
@@ -1,8 +1,8 @@
 <h1>Login</h1>
 
 <%= form_for @conn, Routes.session_path(@conn, :create), [as: :session], fn f -> %>
-  <%= label f, :email %>
-  <%= text_input f, :email %>
+  <%= label f, "Username or email" %>
+  <%= text_input f, :credential %>
   
   <%= label f, :password %>
   <%= password_input f, :password %>
