--- a/lib/bank_web/templates/user/form.html.eex
+++ b/lib/bank_web/templates/user/form.html.eex
@@ -1,21 +1,25 @@
-<%= form_for @changeset, @action, fn f -> %>
-  <%= if @changeset.action do %>
+<%= form_for @conn, @action, fn f -> %>
+  <%= if @errors do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
+  <%= label f, :username %>
+  <%= text_input f, :username %>
+  <%= error_tag @errors, :username %>
+
   <%= label f, :email %>
   <%= text_input f, :email %>
-  <%= error_tag f, :email %>
+  <%= error_tag @errors, :email %>
 
-  <%= label f, "Password" %>
-  <%= password_input f, :pass %>
-  <%= error_tag f, :pass %>
+  <%= label f, :password %>
+  <%= text_input f, :password %>
+  <%= error_tag @errors, :password %>
 
-  <%= label f, "Confirm Password" %>
-  <%= password_input f, :pass_confirmation %>
-  <%= error_tag f, :pass_confirmation %>
+  <%= label f, :password_confirmation %>
+  <%= text_input f, :password_confirmation %>
+  <%= error_tag @errors, :password_confirmation %>
 
   <div>
     <%= submit "Save" %>
