Create wallet page
Add a simple page to show balance to current user.

--- a/lib/bank_web/templates/layout/app.html.eex
+++ b/lib/bank_web/templates/layout/app.html.eex
@@ -17,6 +17,7 @@
               <%= link "Log out",
                   to: Routes.session_path(@conn, :delete, @current_user),
                   method: "delete" %>
+              <%= link "Wallet", to: Routes.wallet_path(@conn, :show) %>
             <% else %>
               <%= link "Register", to: Routes.user_path(@conn, :new) %>
               <%= link "Login", to: Routes.session_path(@conn, :new) %>
