--- a/lib/bank_web/templates/user/form.html.eex
+++ b/lib/bank_web/templates/user/form.html.eex
@@ -14,11 +14,11 @@
   <%= error_tag @errors, :email %>
 
   <%= label f, :password %>
-  <%= text_input f, :password %>
+  <%= password_input  f, :password %>
   <%= error_tag @errors, :password %>
 
   <%= label f, :password_confirmation %>
-  <%= text_input f, :password_confirmation %>
+  <%= password_input  f, :password_confirmation %>
   <%= error_tag @errors, :password_confirmation %>
 
   <div>
